--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -21,19 +21,37 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="5">
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/subDisplay"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:gravity="center_vertical|right"
+                android:textColor="#FDFEFE"
+                android:textSize="20sp"
+                android:singleLine="true"
+                android:ellipsize="end"/>
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2">
 
             <TextView
                 android:id="@+id/calculatorDisplay"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
-                android:text="0"
                 android:gravity="center_vertical|right"
                 android:textColor="#FDFEFE"
                 android:textSize="30sp"
-                />
+                android:singleLine="true"
+                android:ellipsize="end"/>
         </TableRow>
+
 
         <TableRow
             android:layout_width="match_parent"
@@ -99,37 +117,41 @@
                 android:textSize="22sp"
                 android:backgroundTint="#95A5A6"
                 app:cornerRadius="20dp"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                android:onClick = "deleteLastChar"/>
 
             <Button
                 android:id="@+id/CE"
                 android:layout_height="match_parent"
                 android:layout_margin="3dp"
                 android:text="CE"
-                android:textSize="22sp"
+                android:textSize="20sp"
                 android:backgroundTint="#95A5A6"
                 app:cornerRadius="20dp"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                android:onClick = "clearLastEntryBtn"/>
 
             <Button
                 android:id="@+id/C"
                 android:layout_height="match_parent"
                 android:layout_margin="3dp"
-                android:text="C"
-                android:textSize="22sp"
+                android:text="AC"
+                android:textSize="20sp"
                 android:backgroundTint="#95A5A6"
                 app:cornerRadius="20dp"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                android:onClick = "allClearBtn"/>
 
             <Button
-                android:id="@+id/plusMinus"
+                android:id="@+id/slash"
                 android:layout_height="match_parent"
-                android:layout_margin="3dp"
-                android:text="+-"
+                android:text="/"
                 android:textSize="22sp"
+                android:layout_margin="3dp"
                 android:backgroundTint="#95A5A6"
                 app:cornerRadius="20dp"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                android:onClick = "signBtnClick"/>
 
             <Button
                 android:id="@+id/root"
@@ -138,7 +160,8 @@
                 android:text="√"
                 android:textSize="22sp" android:backgroundTint="#95A5A6"
                 app:cornerRadius="20dp"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                android:onClick = "squareRootBtn"/>
         </TableRow>
 
         <TableRow
@@ -154,7 +177,8 @@
                 android:layout_margin="3dp"
                 android:backgroundTint="#EDBB99"
                 app:cornerRadius="20dp"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                android:onClick = "numBtnClick"/>
 
             <Button
                 android:id="@+id/eight"
@@ -164,7 +188,8 @@
                 android:layout_margin="3dp"
                 android:backgroundTint="#EDBB99"
                 app:cornerRadius="20dp"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                android:onClick = "numBtnClick"/>
 
             <Button
                 android:id="@+id/nine"
@@ -174,17 +199,19 @@
                 android:layout_margin="3dp"
                 android:backgroundTint="#EDBB99"
                 app:cornerRadius="20dp"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                android:onClick = "numBtnClick"/>
 
             <Button
-                android:id="@+id/slash"
+                android:id="@+id/Multiply"
                 android:layout_height="match_parent"
-                android:text="/"
+                android:text="*"
                 android:textSize="22sp"
                 android:layout_margin="3dp"
                 android:backgroundTint="#95A5A6"
                 app:cornerRadius="20dp"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                android:onClick = "signBtnClick"/>
 
             <Button
                 android:id="@+id/percent"
@@ -210,7 +237,8 @@
                 android:layout_margin="3dp"
                 android:backgroundTint="#EDBB99"
                 app:cornerRadius="20dp"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                android:onClick = "numBtnClick"/>
 
             <Button
                 android:id="@+id/Five"
@@ -220,7 +248,8 @@
                 android:layout_margin="3dp"
                 android:backgroundTint="#EDBB99"
                 app:cornerRadius="20dp"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                android:onClick = "numBtnClick"/>
 
             <Button
                 android:id="@+id/Six"
@@ -230,17 +259,19 @@
                 android:layout_margin="3dp"
                 android:backgroundTint="#EDBB99"
                 app:cornerRadius="20dp"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                android:onClick = "numBtnClick"/>
 
             <Button
-                android:id="@+id/Multiply"
+                android:id="@+id/minus"
                 android:layout_height="match_parent"
-                android:text="*"
+                android:text="-"
                 android:textSize="22sp"
                 android:layout_margin="3dp"
                 android:backgroundTint="#95A5A6"
                 app:cornerRadius="20dp"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                android:onClick = "signBtnClick"/>
 
             <Button
                 android:id="@+id/Inverse"
@@ -266,7 +297,8 @@
                 android:layout_margin="3dp"
                 android:backgroundTint="#EDBB99"
                 app:cornerRadius="20dp"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                android:onClick = "numBtnClick"/>
 
             <Button
                 android:id="@+id/two"
@@ -276,7 +308,8 @@
                 android:layout_margin="3dp"
                 android:backgroundTint="#EDBB99"
                 app:cornerRadius="20dp"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                android:onClick = "numBtnClick"/>
 
             <Button
                 android:id="@+id/three"
@@ -286,17 +319,19 @@
                 android:layout_margin="3dp"
                 android:backgroundTint="#EDBB99"
                 app:cornerRadius="20dp"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                android:onClick = "numBtnClick"/>
 
             <Button
-                android:id="@+id/minus"
+                android:id="@+id/plus"
                 android:layout_height="match_parent"
-                android:text="-"
-                android:textSize="22sp"
                 android:layout_margin="3dp"
+                android:text="+"
+                android:textSize="22sp"
                 android:backgroundTint="#95A5A6"
                 app:cornerRadius="20dp"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                android:onClick = "signBtnClick"/>
 
             <Button
                 android:id="@+id/dot"
@@ -306,7 +341,8 @@
                 android:layout_margin="3dp"
                 android:backgroundTint="#95A5A6"
                 app:cornerRadius="20dp"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                android:onClick = "dotSignBtn"/>
         </TableRow>
 
         <TableRow
@@ -323,18 +359,31 @@
                 android:layout_margin="3dp"
                 android:backgroundTint="#EDBB99"
                 app:cornerRadius="20dp"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                android:onClick = "numBtnClick"/>
+
+            <Button
+                android:id="@+id/plusMinus"
+                android:layout_height="match_parent"
+                android:layout_margin="3dp"
+                android:text="+-"
+                android:textSize="22sp"
+                android:backgroundTint="#95A5A6"
+                app:cornerRadius="20dp"
+                android:textColor="#000000"
+                android:onClick = "signChane"/>
 
             <Button
                 android:id="@+id/equal"
                 android:layout_height="match_parent"
-                android:layout_span="3"
-                android:text="="
-                android:textSize="22sp"
                 android:layout_margin="3dp"
+                android:layout_span="2"
                 android:backgroundTint="#95A5A6"
+                android:text="="
+                android:textColor="#000000"
+                android:textSize="22sp"
                 app:cornerRadius="20dp"
-                android:textColor="#000000"/>
+                android:onClick = "resultBtn"/>
         </TableRow>
     </TableLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
